:bug: overlap

--- a/style.css
+++ b/style.css
@@ -39,13 +39,13 @@ img {
 .main__container {
   max-width: 1170px;
   min-height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
 }
 
-/* Why cards over each other? */
+/* Why do the cards overlap when I use the wrap property? */
 .cards__container {
-  width: 100%;
-  height: 100%;
   display: flex;
   gap: 16px;
   flex-wrap: wrap;
@@ -54,9 +54,12 @@ img {
 /* CARD */
 
 .flip-card {
-  width: 200px;
+  max-width: 200px;
   height: auto;
   perspective: 1000px;
+  flex-shrink: 1;
+  flex-grow: 1;
+  width: calc(25% - 16px);
 }
 
 .flip-card-inner {
